Glazed V17, ar3 comes to save the day